# robot-vision

./: README.md
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/src/: coefficients.cpp  example.cpp  outliers.cpp  passthrough.cpp  voxel.cpp
ras_vision/: CMakeLists.txt~  package.xml
ras_vision_launch/: CMakeLists.txt  package.xml
ras_vision_launch/launch/: ras_vision.launch
ras_vision_pcl/: CMakeLists.txt  package.xml
ras_vision_pcl/launch/: passthrough.launch  segmentation.launch
ras_vision_pcl/src/: detector.cpp  detector.cpp.autosave  euclidean_clustering.cpp  example.cpp  multiplane_segmentation.cpp  plane_segmentation.cpp  ransac_model.cpp  rotation.cpp  segmentation.cpp  transformation.cpp  voxel_grid.cpp
ras_vision_recognizer/: CMakeLists.txt  package.xml
ras_vision_recognizer/script/: visualizer.py
ras_vision_recognizer/script/detectors/: depth_detector.py
ras_vision_recognizer/script/recognizers/: color_recognizer.py  material_recognizer.py  shape_recognizer.py
ras_vision_recognizer/src/: color_recognizer.py  depth_detector.py  detector.py  feature_extractor.py  object_classifier.py  recognizer.py  shape_detector.py
ras_vision_recognizer/src/detectors/: depth_detector.cpp  depth_detector.py  depth_test.cpp  pcl_detector.cpp
ras_vision_recognizer/src/old/: old_shape_recognizer.py  recognizer.py
ras_vision_recognizer/src/recognizers/: color_recognizer.cpp  material_recognizer.py  shape_recognizer.py
vision/: Makefile  (+5 more)
vision_cv/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  vision_cv.cbp
vision_cv/script/: blue.txt  classifier.py  classify.py  green.txt  histogram.py  lightblue.txt  lightgreen.txt  material_classifier.py  material_collector.py  orange.txt  purple.txt  red.txt  shape_collector.py  svm_histogram.py  svm_trainer.py  trainer.py  yellow.txt
vision_cv/script/classifiers/random_forest/: redvsgrn.pkl  redvsgrn.pkl_03.npy  redvsgrn.pkl_04.npy  redvsgrn.pkl_06.npy  redvsgrn.pkl_07.npy  redvsgrn.pkl_09.npy  redvsgrn.pkl_10.npy  redvsgrn.pkl_100.npy  redvsgrn.pkl_101.npy  redvsgrn.pkl_102.npy  redvsgrn.pkl_103.npy  redvsgrn.pkl_104.npy  redvsgrn.pkl_105.npy  redvsgrn.pkl_106.npy  redvsgrn.pkl_107.npy  redvsgrn.pkl_11.npy  redvsgrn.pkl_111.npy  redvsgrn.pkl_112.npy  redvsgrn.pkl_114.npy  redvsgrn.pkl_115.npy  redvsgrn.pkl_116.npy  redvsgrn.pkl_117.npy  redvsgrn.pkl_118.npy  redvsgrn.pkl_119.npy  redvsgrn.pkl_15.npy  redvsgrn.pkl_16.npy  redvsgrn.pkl_17.npy  redvsgrn.pkl_18.npy  redvsgrn.pkl_19.npy  redvsgrn.pkl_20.npy  redvsgrn.pkl_21.npy  redvsgrn.pkl_22.npy  redvsgrn.pkl_23.npy  redvsgrn.pkl_27.npy  redvsgrn.pkl_28.npy  redvsgrn.pkl_29.npy  redvsgrn.pkl_30.npy  redvsgrn.pkl_31.npy  redvsgrn.pkl_33.npy  redvsgrn.pkl_34.npy  (+43 more)
vision_cv/script/classifiers/svm/: redvsgrn.pkl  redvsgrn.pkl_03.npy  redvsgrn.pkl_04.npy  redvsgrn.pkl_05.npy  redvsgrn.pkl_07.npy  redvsgrn.pkl_09.npy  redvsgrn.pkl_10.npy  redvsgrn.pkl_11.npy
vision_cv/script/data/: plastic.txt  wood.old.txt  wood.txt
vision_cv/script/data/color_clf/: color_clf.pkl  color_clf.pkl_03.npy  color_clf.pkl_04.npy  color_clf.pkl_05.npy  color_clf.pkl_06.npy  color_clf.pkl_07.npy  color_clf.pkl_08.npy  color_clf.pkl_09.npy  color_clf.pkl_10.npy  color_clf.pkl_100.npy  color_clf.pkl_1000.npy  color_clf.pkl_1001.npy  color_clf.pkl_1002.npy  color_clf.pkl_1003.npy  color_clf.pkl_1004.npy  color_clf.pkl_1005.npy  color_clf.pkl_1006.npy  color_clf.pkl_1007.npy  color_clf.pkl_101.npy  color_clf.pkl_1011.npy  color_clf.pkl_1012.npy  color_clf.pkl_1013.npy  color_clf.pkl_1014.npy  color_clf.pkl_1015.npy  color_clf.pkl_1016.npy  color_clf.pkl_1017.npy  color_clf.pkl_1018.npy  color_clf.pkl_1019.npy  color_clf.pkl_102.npy  color_clf.pkl_1023.npy  color_clf.pkl_1024.npy  color_clf.pkl_1025.npy  color_clf.pkl_1026.npy  color_clf.pkl_1027.npy  color_clf.pkl_1028.npy  color_clf.pkl_1029.npy  color_clf.pkl_103.npy  color_clf.pkl_1030.npy  color_clf.pkl_1031.npy  color_clf.pkl_1035.npy  (+861 more)
vision_cv/script/data/material_clf/: material_clf.pkl  material_clf.pkl_03.npy  material_clf.pkl_04.npy  material_clf.pkl_05.npy  material_clf.pkl_06.npy  material_clf.pkl_07.npy  material_clf.pkl_08.npy  material_clf.pkl_09.npy  material_clf.pkl_10.npy  material_clf.pkl_100.npy  material_clf.pkl_1000.npy  material_clf.pkl_1001.npy  material_clf.pkl_1002.npy  material_clf.pkl_1003.npy  material_clf.pkl_1004.npy  material_clf.pkl_1005.npy  material_clf.pkl_1006.npy  material_clf.pkl_1007.npy  material_clf.pkl_101.npy  material_clf.pkl_1011.npy  material_clf.pkl_1012.npy  material_clf.pkl_1013.npy  material_clf.pkl_1014.npy  material_clf.pkl_1015.npy  material_clf.pkl_1016.npy  material_clf.pkl_1017.npy  material_clf.pkl_1018.npy  material_clf.pkl_1019.npy  material_clf.pkl_102.npy  material_clf.pkl_1023.npy  material_clf.pkl_1024.npy  material_clf.pkl_1025.npy  material_clf.pkl_1026.npy  material_clf.pkl_1027.npy  material_clf.pkl_1028.npy  material_clf.pkl_1029.npy  material_clf.pkl_103.npy  material_clf.pkl_1030.npy  material_clf.pkl_1031.npy  material_clf.pkl_1035.npy  (+861 more)
vision_cv/script/data/shape_clf/: shape_clf.pkl  shape_clf.pkl_03.npy  shape_clf.pkl_04.npy  shape_clf.pkl_05.npy  shape_clf.pkl_06.npy  shape_clf.pkl_07.npy  shape_clf.pkl_08.npy  shape_clf.pkl_09.npy  shape_clf.pkl_10.npy  shape_clf.pkl_100.npy  shape_clf.pkl_1000.npy  shape_clf.pkl_1001.npy  shape_clf.pkl_1002.npy  shape_clf.pkl_1003.npy  shape_clf.pkl_1004.npy  shape_clf.pkl_1005.npy  shape_clf.pkl_1006.npy  shape_clf.pkl_1007.npy  (+883 more)
vision_cv/script/old/: classify.py  normalizer.py  svm_classifier.py
vision_pcl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  vision_pcl.cbp
vision_pcl/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
vision_pcl/catkin_generated/installspace/: vision_pcl.pc  vision_pclConfig.cmake
vision_pcl/src/: detector.cpp  euclidean_clustering.cpp  example.cpp  multiplane_segmentation.cpp  plane_segmentation.cpp  preprocess.cpp  ransac_model.cpp  region_growing.cpp  transformation.cpp  voxel_grid.cpp
(+119 files in other folders)
