<?xml version="1.0"?>
<package>
  <name>ras_vision</name>
  <version>0.0.0</version>
  <description>The ras_depth package</description>

  <maintainer email="fabsch@kth.se">Fabian Schilling</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>